[package]
name = 'procpin'
version = '0.1.0'
edition = '2021'

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"

[target.'cfg(unix)'.dependencies.nix]
version = '0.25.0'
features = ['sched']

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
]
